@@ -105,6 +105,9 @@ sub startIndex        { 1 }
 sub endIndex          { 2 }
 
 
+my %must_flatten =
+   map { $_ => 1 }
+   qw( name id start end score strand description note );
 # given a hashref like {  tagname => [ value1, value2 ], ... }
 # flatten it to numbered tagnames like { tagname => value1, tagname2 => value2 }
 sub _flatten_multivalues {
@@ -113,8 +116,15 @@ sub _flatten_multivalues {
 
     for my $key ( keys %$h ) {
         my $v = $h->{$key};
-        for( my $i = 0; $i < @$v; $i++ ) {
-            $flattened{ $key.($i ? $i+1 : '')} = $v->[$i];
+        if( @$v == 1 ) {
+            $flattened{ $key } = $v->[0];
+        }
+        elsif( $must_flatten{ lc $key } ) {
+            for( my $i = 0; $i < @$v; $i++ ) {
+                $flattened{ $key.($i ? $i+1 : '')} = $v->[$i];
+            }
+        } else {
+            $flattened{ $key } = $v;
         }
     }
 
